--- a/common/css/basic/general.css
+++ b/common/css/basic/general.css
@@ -7,7 +7,7 @@
 
 blockquote {
     border-left: 0px solid #000;
-    padding-left: 60px !important;
+    padding-left: 60px;
     margin: 20px 0 20px 0;
     font-weight: 500;
     font-style: italic;
@@ -156,10 +156,6 @@ blockquote {
     top: 20px;
     left: 0;
     width: 100%;
-}
-
-.radius-5 {
-    border-radius: 5px;
 }
 
 .general-radius {
