--- a/common/css/basic/position.css
+++ b/common/css/basic/position.css
@@ -5,6 +5,13 @@
     -webkit-transform: translate(0, -50%);
 }
 
+.translate-without-top {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
+    -webkit-transform: translate(-50%, 0);
+}
+
 .translate-middle {
     position: absolute;
     left: 50%;
