--- a/common/css/loading-bar.css
+++ b/common/css/loading-bar.css
@@ -1,10 +1,9 @@
 .progress {
-    display: block;
-    text-align: center;
     width: 0;
     height: 3px;
     background: #000;
     transition: width .3s;
+    -webkit-transition: width .3s;
     position: fixed;
     top: 0;
     left: 0;
