--- a/admin/css/div.css
+++ b/admin/css/div.css
@@ -1,11 +1,17 @@
 .header-container {
-    height: 70px;
+    height: 50px;
+    /* height: 70px; */
     position: fixed;
     left: 0;
     top: 0;
     width: 100%;
     box-shadow: 0 0.125rem 0.3125rem rgba(0, 0, 0, .056);
     z-index: 100;
+    /* background: #23282d; */
+}
+
+.header-logo {
+    height: 22px;
 }
 
 .setting-meta-logo-layout {
@@ -27,13 +33,14 @@
     width: 40px;
     height: 40px;
     border-radius: 50%;
+    color: #000;
 }
 
 .header-admin-icon-menu-layout {
     position: fixed;
     width: 280px;
     right: 10px;
-    top: 70px;
+    top: 50px;
     background: #fff;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px !important;
     border-width: 1px 1px 1px;
@@ -78,32 +85,33 @@
     margin: 50px auto;
 }
 
-.left-side-content-container {
-    padding: 30px;
-    position: fixed;
-    left: 0;
-    top: 70px;
-    width: 280px;
-    overflow-y: auto;
-    overflow-x: hidden;
-    height: calc(100vh - 70px);
-}
-
 .right-side-content-container {
     padding: 30px 50px;
 }
 
 .left-side-content {
     position: absolute;
-    width: 280px;
+    width: 200px;
     border-right: 1px #eee solid;
     min-height: 100%;
+}
+
+.left-side-content-container {
+    padding: 30px;
+    position: fixed;
+    left: 0;
+    /* top: 70px; */
+    width: 200px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: calc(100vh - 50px);
+    /* background: #23282d; */
 }
 
 .right-side-content {
     float: left;
     box-sizing: border-box;
-    padding-left: 280px;
+    padding-left: 200px;
     overflow-y: overlay;
     overflow-x: hidden;
     clear: both;
@@ -111,8 +119,8 @@
 }
 
 .admin-container {
-    margin: 70px 0 0 0;
-    min-height: calc(100vh - 70px);
+    margin: 50px 0 0 0;
+    min-height: calc(100vh - 50px);
     min-width: 100%;
     position: absolute;
 }
@@ -146,10 +154,6 @@
     position: absolute;
     right: -8px;
     top: 0;
-}
-
-.right-side-content-layout {
-    padding: 0 0 0 35px;
 }
 
 .manager-permission-table {
